# koifit

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  DESIGN.md  Dockerfile  MVP.md  README.md  docker-compose.yml  hello.py  index.html  init_db.py  justfile  koifit.db  main.py  models.py  package.json  pnpm-lock.yaml  pyproject.toml
.cursor/rules/: frontend-rules.mdc  rust-rules.mdc
.github/workflows/: publish.yml
app/assets/: manifest.json  sw.js
app/assets/javascripts/: auto-save.js  exercise-history.js  session.js
app/assets/stylesheets/: _reset.css  base.css  buttons.css  cards.css  colors.css  day-selector.css  exercise-card.css  exercise-history.css  inputs.css  layout.css  modal.css  pwa-install.css  rest-timer.css  session-panel.css  set-table.css  utilities.css
db/: db.sqlite  seed.sql
koifit/: __init__.py  models.py  settings.py  templates.py
koifit/db/: __init__.py  connection.py  setup.py
koifit/routes/: __init__.py  exercises.py  home.py  sessions.py
src/: App.css  App.tsx  api.ts
src-core/: Cargo.toml
src-core/src/: db.rs  error.rs  lib.rs  models.rs
src-server/: Cargo.toml
src-server/src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/pages/: ExerciseHistory.tsx  Home.tsx  Session.tsx
templates/components/: cancel_icon.html
templates/layouts/: application.html
templates/pages/: days.html  exercise_history.html  index.html  session.html
tests/: conftest.py  test_mvp.py
views/layouts/: application.html
views/pages/: days.html  index.html  session.html
(+2 files in other folders)
