[project]
name = "koifit"
version = "0.1.0"
description = "Self-hosted workout tracker"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi>=0.124.2",
    "jinja2>=3.1.6",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.38.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "httpx>=0.27.2",
    "anyio>=4.4.0",
    "asgi-lifespan>=2.1.0",
    "ruff>=0.6.9",
    "pre-commit>=3.8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
