[package]
name = "src-server"
version.workspace = true
edition.workspace = true

[dependencies]
src-core = { path = "../src-core" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
